web/style.css
@import url("xcharter/xcharter.css");
@import url("xeb-garamond/xeb-garamond.css");

:root {
  --font-family: 'XCharter', serif;
  /* No old-style figures: */
  /* --font-feature-settings: "onum" 1, "cv01" 1; */
  --font-family-heading: 'XEB Garamond', serif;
  --font-feature-settings-heading: "onum" 0;
  --font-family-monospace: 'DejaVu Sans Mono', 'Liberation Mono', 'Hack', 'Roboto Mono', monospace;
  /* 86% makes DejaVu Sans Mono match XCharter in x-height. This is
   * slightly larger to allow inline code to stand out a tiny bit more
   * without becoming an eye sore. */
  --font-size-monospace: 88%;
  --line-height: 1.35rem;
  --parsep: 0.3375rem;
}

html {
  font-size: calc(0.9em + 0.25vw);
}

@media (min-width: 70rem) {
  html {
    text-align: justify;
  }
}

body {
  font-family: var(--font-family);
  font-feature-settings: var(--font-feature-settings);
  margin: auto;
  background-color: #faf9f6;
  color: #333;
  /* max-width: calc(73ch + 8*var(--line-height)); */
  hyphens: auto;
  hyphenate-limit-chars: 4 2 2;
  min-height: 100vh;
}

p {
  margin: var(--parsep) 0 0 0;
  line-height: var(--line-height);
}

li {
  margin: calc(0.5*var(--parsep)) 0 0 0;
  line-height: var(--line-height);
}

/* p + p { */
/*   margin: 0; */
/*   text-indent: var(--line-height); */
/* } */

/* ul + p, ol + p, dl + p { */
/*   margin: 0; */
/*   text-indent: 0; */
/* } */

/* li > p { */
/*   margin: 0; */
/* } */

h1 {
  font-family: var(--font-family-heading);
  font-feature-settings: var(--font-feature-settings-heading);
  font-weight: normal;
  text-transform: uppercase;
  letter-spacing: 0.18em;
  /* text-shadow: 0.05em 0.05em 0.02em #DDD; */
  line-height: calc(2*var(--line-height));
  font-size: 2.0rem;
  margin: calc(2*var(--line-height)) 0;
  /* margin: calc(3*var(--line-height)) 0 calc(2*var(--line-height)) 0; */
  text-align: center;
}

h2 {
  /* font-family: var(--font-family-heading); */
  /* font-feature-settings: var(--font-feature-settings-heading); */
  /* font-size: 1.8rem; */
  font-size: 1.3rem;
  font-weight: bold;
  /* font-variant: small-caps; */
  /* text-transform: lowercase; */
  /* letter-spacing: 0.1em; */
  line-height: var(--line-height);
  margin: var(--line-height) 0;
}

h3 {
  font-size: 1.2rem;
  font-weight: bold;
  line-height: var(--line-height);
  margin: var(--line-height) 0;
}

h4 {
  /* font-family: var(--font-family-heading); */
  /* font-size: 1.416rem; */
  font-size: 1.1rem;
  font-weight: bold;
  line-height: var(--line-height);
  margin: var(--line-height) 0;
}

h5 {
  font-size: 1rem;
  font-weight: bold;
  line-height: var(--line-height);
  margin: var(--line-height) 0;
}

h6 {
  font-size: 1rem;
  font-weight: normal;
  line-height: var(--line-height);
  margin: calc(0.75*var(--line-height)) 0;
  color: #666;
}

h1 a {
  text-decoration: none;
  color: #333;
}
h2 a {
  text-decoration: none;
  color: #333;
}
h3 a {
  text-decoration: none;
  color: #333;
}
h4 a {
  text-decoration: none;
  color: #333;
}
h5 a {
  text-decoration: none;
  color: #333;
}
h6 a {
  text-decoration: none;
  color: #333;
}

pre {
  font-family: var(--font-family-monospace);
  /* With DejaVu Sans Mono 97% gets about 80 characters per line at full
   * width (73ch). */
  font-size: 97%;
}

code {
  font-family: var(--font-family-monospace);
  font-size: var(--font-size-monospace);
  color: #111;
  hyphens: none;
}

hr {
  height: 0.2em;
  border: 0;
  color: #CCCCCC;
  background-color: #CCCCCC;
}

blockquote, table, pre {
  line-height: var(--line-height);
  margin: var(--parsep) 0 0 0;
}

pre {
  background-color: #F5F3ED;
  color: #333;
  border: 0.1em solid #CCCCCC;
  line-height: 1.25em;
  overflow: auto;
  padding: 0 0 calc(0.5*var(--parsep)) 0;
}

ul, ol, dl {
  padding-left: var(--line-height);
  margin: 0;
}

a {
  /* text-decoration: none; */
  /* color: #0233c8; */
  color: #333;
  text-decoration-thickness: 0.04em;
  text-underline-offset: 0.1em;
}

a:hover {
  text-decoration: underline;
}

img {
  display: block;
  max-width: 90%;
  margin: auto;
}

.reference-bullet {
  display: block;
  text-align: left;
  margin-top: calc(2*var(--parsep));
  hyphens: none;
}

.reference {
  /* padding: 0.3em 0; */
  /* background-color: #EEEEEE; */
}

.locative-type a {
  color: #333;
  text-decoration: none;
  border-bottom: 0;
  font-weight: bold;
}

.reference-object {
  background-color: #EBE8E2;
  padding: 0.1em;
  border: solid 1px;
  font-weight: bold;
}

.reference-object a {
  text-decoration: none;
  color: #333;
  border-bottom: none;
}

.locative-args {
  font-style: italic;
}

.locative-args code {
  font-family: sans-serif;
}

.navigation a {
  color: #CCCCCC;
  text-shadow: none;
  border-bottom: none;
}

/* Option 1 for navigation links: just hide the links in the previous
   line. Good because there is no jumping around of content as with
   the other otptions. */

.navigation {
  display: block;
  visibility: hidden;
  margin-bottom: -1.5em;
}

.outer-navigation:hover .navigation {
  visibility: visible;
}

/* Option 2 for navigation links: heading moves right to make room for
   the links. */

/* .navigation { */
/*   display: none; */
/* } */
/*  */
/* h1:hover .navigation, */
/* h2:hover .navigation, */
/* h3:hover .navigation, */
/* h4:hover .navigation, */
/* h5:hover .navigation, */
/* h6:hover .navigation { */
/*   display: inline; */
/* } */

/* Option 3 for navigation links: heading moves down to make room for
   the links. */

/* .navigation { */
/*   display: none; */
/* } */
/*  */
/* h1:hover .navigation, */
/* h2:hover .navigation, */
/* h3:hover .navigation, */
/* h4:hover .navigation, */
/* h5:hover .navigation, */
/* h6:hover .navigation { */
/*   display: block; */
/* } */

/* Syntax highlighting with Colorize */

.symbol { color : #770055; background-color : transparent; border: 0px; margin: 0px;}
a.symbol:link { color : #229955; background-color : transparent; text-decoration: none; border: 0px; margin: 0px; }
a.symbol:active { color : #229955; background-color : transparent; text-decoration: none; border: 0px; margin: 0px; }
a.symbol:visited { color : #229955; background-color : transparent; text-decoration: none; border: 0px; margin: 0px; }
a.symbol:hover { color : #229955; background-color : transparent; text-decoration: none; border: 0px; margin: 0px; }
.special { color : #FF5000; background-color : inherit; }
.keyword { color : #770000; background-color : inherit; }
.comment { color : #007777; background-color : inherit; }
.string { color : #777777; background-color : inherit; }
.atom { color : #314F4F; background-color : inherit; }
.macro { color : #FF5000; background-color : inherit; }
.variable { color : #36648B; background-color : inherit; }
.function { color : #8B4789; background-color : inherit; }
.attribute { color : #FF5000; background-color : inherit; }
.character { color : #0055AA; background-color : inherit; }
.syntaxerror { color : #FF0000; background-color : inherit; }
.diff-deleted { color : #5F2121; background-color : inherit; }
.diff-added { color : #215F21; background-color : inherit; }

/* Disable rainbow nesting on hover */

/* span.paren1 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren1:hover { color : inherit; background-color : #BAFFFF; } */
/* span.paren2 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren2:hover { color : inherit; background-color : #FFCACA; } */
/* span.paren3 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren3:hover { color : inherit; background-color : #FFFFBA; } */
/* span.paren4 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren4:hover { color : inherit; background-color : #CACAFF; } */
/* span.paren5 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren5:hover { color : inherit; background-color : #CAFFCA; } */
/* span.paren6 { background-color : inherit; -webkit-transition: background-color 0.2s linear; } */
/* span.paren6:hover { color : inherit; background-color : #FFBAFF; } */

#content-container {
  margin: 0;
  padding: 0 0 var(--line-height) 0;
}

#content {
  max-width: 85ex;
  margin-left: calc(min(40ex,33%));
  padding-left: 4ch;
  padding-right: 4ch;
}

#toc {
  top: 0px;
  left: 0px;
  height: 100%;
  width: 40ex;
  max-width: 33%;
  position: fixed;
  overflow-y:auto;
  overflow-x:hidden;
  background: #333;
  box-shadow: inset -5px 0 5px 0px #000;
  color: #aaa;
  text-align: left;
}

#toc ul {
  font-family: sans-serif;
  font-size: 80%;
}

#toc li {
  line-height: 1.0;
}

#toc a {
  text-decoration: none;
  border-bottom: none;
}

#toc hr {
  height: 0.05em;
  border: 0;
  background: #777;
}

#toc ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

#toc li {
  padding: 5px 10px;
}

#toc .toc-h2 {
  padding-left: 10px;
}

#toc .toc-h3 {
  padding-left: 20px;
}

#toc .toc-h4 {
  padding-left: 30px;
}

#toc .toc-active {
  background: #336699;
  box-shadow: inset -5px 0px 10px -5px #000;
}

#page-toc a {
  color: #fff;
}

.menu-block {
  padding-left: 10px;
  margin-bottom: 1em;
}

.menu-block-title {
  font-size: 90%;
}

.menu-block a {
  color: #fff;
  border-bottom: none;
}

#toc-header a {
  color: #777777;
}

#toc-footer a {
  font-size: 80%;
  color: #777777;
}

